--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,6 @@
     <string name="Enter_Event_description">Enter Event description</string>
     <string name="Enter_Event_date">Enter Event date</string>
     <string name="Enter_Event_capacity">Enter event capacity</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
