--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="confirm_password">Confirm password</string>
     <string name="confirm_password_attendee">Confirm password</string>
+
+    <string name="more_details">More Details</string>
+    <string name="title_activity_one_event">OneEventActivity</string>
 </resources>
