Screaming and crying

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,6 @@
     <string name="in_the_benining">begin your journey...</string>
     <string name="mderegister">Deregister</string>
     <string name="mregister">Register</string>
+    <string name="edelete">Delete event</string>
+    <string name="esave">Save event</string>
 </resources>
